k8s-config/deployment.yaml
# Initial configs not final

apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: demo-app-staging
spec:
  replicas: 2

  selector:
    matchLabels:
      app: login-app

  template:
    metadata:
      labels:
        app: login-app

    spec:
      containers:
        - name: login-app
          image: 192.168.10.23:5000/cide-demo-app

          ports:
            - containerPort: <APP_PORT>

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
