k8s-config/service.yaml
# Initial config
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo-app-prod
spec:
  selector:
    app: demo-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: <APP_PORT> 

  type: ClusterIP
